--- a/assets/css/create_material.css
+++ b/assets/css/create_material.css
@@ -157,16 +157,75 @@ tbody tr:hover {
     background-color: rgba(163, 252, 175, 0.1);
 }
 
-.delete-criterio {
-    background-color: #d9534f;
-    color: white;
-    border: none;
-    padding: 0.5rem 1rem;
-    border-radius: 5px;
+/* Estilos base para el botón delete-criterio */
+button.delete-criterio {
+    width: 150px;
+    height: 50px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
-}
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #e62222;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.15);
+    position: relative;
+    overflow: hidden;
+    transition: all 200ms ease-in-out;
+  }
+  
+  button.delete-criterio, button.delete-criterio span {
+    transition: 200ms;
+  }
+  
+  /* Estilos del texto dentro del botón */
+  button.delete-criterio .text {
+    transform: translateX(35px);
+    color: white;
+    font-weight: bold;
+  }
+  
+  /* Estilos del icono dentro del botón */
+  button.delete-criterio .icon {
+    position: absolute;
+    border-left: 1px solid #c41b1b;
+    transform: translateX(110px);
+    height: 40px;
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 200ms, width 200ms;
+  }
+  
+  button.delete-criterio svg {
+    width: 15px;
+    fill: #eee;
+  }
+  
+  /* Efecto hover */
+  button.delete-criterio:hover {
+    background: #ff3636;
+  }
+  
+  button.delete-criterio:hover .text {
+    color: transparent;
+  }
+  
+  button.delete-criterio:hover .icon {
+    width: 150px;
+    border-left: none;
+    transform: translateX(0);
+  }
+  
+  /* Efecto focus */
+  button.delete-criterio:focus {
+    outline: none;
+  }
+  
+  /* Efecto active en el icono */
+  button.delete-criterio:active .icon svg {
+    transform: scale(0.8);
+  }
+  
 
-.delete-criterio:hover {
-    background-color: #c9302c;
-}
