--- a/assets/css/create_material.css
+++ b/assets/css/create_material.css
@@ -228,4 +228,55 @@ button.delete-criterio {
     transform: scale(0.8);
   }
   
-
+/* Estilos para el botón con id "save" */
+#save {
+    font-family: inherit;
+    font-size: 20px;
+    background: #212121;
+    color: white;
+    fill: rgb(155, 153, 153);
+    padding: 0.7em 1em;
+    padding-left: 0.9em;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    border: none;
+    border-radius: 15px;
+    font-weight: 1000;
+  }
+  
+  #save span {
+    display: block;
+    margin-left: 0.3em;
+    transition: all 0.3s ease-in-out;
+  }
+  
+  #save svg {
+    display: block;
+    transform-origin: center center;
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  #save:hover {
+    background: #000;
+  }
+  
+  #save:hover .svg-wrapper {
+    transform: scale(1.25);
+    transition: 0.5s linear;
+  }
+  
+  #save:hover svg {
+    transform: translateX(1.2em) scale(1.1);
+    fill: #fff;
+  }
+  
+  #save:hover span {
+    opacity: 0;
+    transition: 0.5s linear;
+  }
+  
+  #save:active {
+    transform: scale(0.95);
+  }
+  
