--- a/assets/css/create_material.css
+++ b/assets/css/create_material.css
@@ -92,12 +92,13 @@ textarea {
 button {
     background-color: var(--button-bg);
     color: white;
-    padding: 0.75rem 1.5rem;
+    padding: 0.5rem 1rem; /* Ajusta el padding para hacer los botones más pequeños */
     border: none;
     border-radius: 5px;
-    font-size: 1rem;
+    font-size: 0.875rem; /* Reduce el tamaño de la fuente */
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.2s ease;
+    margin-bottom: 1rem; /* Agrega un margen inferior para separar los botones */
 }
 
 button:hover {
