--- a/assets/css/create_material.css
+++ b/assets/css/create_material.css
@@ -230,50 +230,55 @@ button.delete-criterio {
   }
   
 /* Estilos para el botón con id "save" */
-button {
-    background-color: var(--button-bg);
-    color: white;
-    padding: 0.5rem 1rem; /* Ajusta el padding para hacer los botones más pequeños */
-    border: none;
-    border-radius: 5px;
-    font-size: 0.875rem; /* Reduce el tamaño de la fuente */
-    cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.2s ease;
-    margin-bottom: 1rem; /* Agrega un margen inferior para separar los botones */
-}
-
-#add-criterio, #save {
-    font-size: 0.875rem; /* Reduce el tamaño de la fuente */
-    padding: 0.5rem 1rem; /* Ajusta el padding */
-}
-
 #save {
-    font-size: 16px; /* Ajusta la fuente */
-    padding: 0.5em 1em;
-    padding-left: 0.7em; /* Ajusta el padding interno para hacerlo más pequeño */
+    font-family: inherit;
+    font-size: 14px; /* Reduce el tamaño de la fuente */
+    background: #212121;
+    color: white;
+    fill: rgb(155, 153, 153);
+    padding: 0.5em 0.8em; /* Reduce el padding */
+    padding-left: 0.7em; /* Ajusta el padding izquierdo */
     display: flex;
     align-items: center;
+    cursor: pointer;
+    border: none;
+    border-radius: 10px; /* Reduce el radio de los bordes para hacerlo más compacto */
+    font-weight: 700; /* Ajusta el peso de la fuente */
+}
+
+#save span {
+    display: block;
+    margin-left: 0.3em;
+    transition: all 0.3s ease-in-out;
 }
 
 #save svg {
-    width: 20px; /* Ajusta el tamaño del icono */
-    height: 20px; /* Ajusta el tamaño del icono */
-}
-
-#add-criterio {
-    font-size: 0.875rem; /* Reduce el tamaño de la fuente */
-    padding: 0.5rem 1rem;
+    display: block;
+    width: 18px; /* Reduce el tamaño del ícono */
+    height: 18px; /* Ajusta la altura del ícono */
+    transform-origin: center center;
+    transition: transform 0.3s ease-in-out;
 }
 
 #save:hover {
     background: #000;
 }
 
-#save:active {
-    transform: scale(0.95);
+#save:hover .svg-wrapper {
+    transform: scale(1.25);
+    transition: 0.5s linear;
 }
 
-button:hover {
-    background-color: var(--button-hover);
-    transform: scale(1.05);
+#save:hover svg {
+    transform: translateX(1.2em) scale(1.1);
+    fill: #fff;
+}
+
+#save:hover span {
+    opacity: 0;
+    transition: 0.5s linear;
+}
+
+#save:active {
+    transform: scale(0.95);
 }
