--- a/assets/css/create_material.css
+++ b/assets/css/create_material.css
@@ -92,13 +92,13 @@ textarea {
 button {
     background-color: var(--button-bg);
     color: white;
-    padding: 0.5rem 1rem; /* Ajusta el padding para hacer los botones más pequeños */
+    padding: 0.5rem 1rem; 
     border: none;
     border-radius: 5px;
-    font-size: 0.875rem; /* Reduce el tamaño de la fuente */
+    font-size: 0.875rem; 
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.2s ease;
-    margin-bottom: 1rem; /* Agrega un margen inferior para separar los botones */
+    margin-bottom: 1rem; 
 }
 
 button:hover {
@@ -121,7 +121,6 @@ footer p {
     font-size: 1rem;
 }
 
-/* Tabla de Criterios */
 table {
     width: 100%;
     border-collapse: collapse;
@@ -158,7 +157,6 @@ tbody tr:hover {
     background-color: rgba(163, 252, 175, 0.1);
 }
 
-/* Estilo para los campos de número */
 input[type="number"] {
     width: 100%;
     padding: 0.75rem;
@@ -171,12 +169,10 @@ input[type="number"] {
     transition: border-color 0.3s ease;
 }
 
-/* Efecto de foco */
 input[type="number"]:focus {
     border-color: var(--primary-color);
 }
 
-/* Para el caso en que sea un campo de número con valores limitados */
 input[type="number"]:invalid {
     border-color: #ff4d4d;
 }
@@ -186,7 +182,6 @@ input[type="number"]:disabled {
     cursor: not-allowed;
 }
 
-/* Estilo específico para el input dentro de la tabla */
 td input[type="number"] {
     width: 100%;
     padding: 0.75rem;
@@ -199,7 +194,6 @@ td input[type="number"] {
     transition: border-color 0.3s ease;
 }
 
-/* Estilos base para el botón delete-criterio */
 button.delete-criterio {
     width: 150px;
     height: 50px;
@@ -220,14 +214,12 @@ button.delete-criterio {
     transition: 200ms;
   }
   
-  /* Estilos del texto dentro del botón */
   button.delete-criterio .text {
     transform: translateX(35px);
     color: white;
     font-weight: bold;
   }
   
-  /* Estilos del icono dentro del botón */
   button.delete-criterio .icon {
     position: absolute;
     border-left: 1px solid #c41b1b;
@@ -245,7 +237,6 @@ button.delete-criterio {
     fill: #eee;
   }
   
-  /* Efecto hover */
   button.delete-criterio:hover {
     background: #ff3636;
   }
@@ -260,7 +251,6 @@ button.delete-criterio {
     transform: translateX(0);
   }
   
-  /* Efecto focus */
   button.delete-criterio:focus {
     outline: none;
   }
@@ -274,31 +264,31 @@ button.delete-criterio {
 
 #save {
     font-family: inherit;
-    font-size: 18px; /* Aumento el tamaño de la fuente */
+    font-size: 18px; 
     background: #212121;
     color: white;
     fill: rgb(155, 153, 153);
-    width: 180px; /* Aumento el ancho para que el texto se ajuste mejor */
-    height: 60px; /* Aumento la altura para mayor espacio */
+    width: 180px; 
+    height: 60px; 
     display: flex;
     align-items: center;
-    justify-content: center; /* Centra el contenido dentro del botón */
+    justify-content: center; 
     cursor: pointer;
     border: none;
-    border-radius: 10px; /* Bordes ligeramente redondeados */
+    border-radius: 10px; 
     font-weight: 700;
-    padding: 0 1.5em; /* Un poco más de padding horizontal */
+    padding: 0 1.5em; 
 }
 
 #save span {
     display: block;
-    margin-left: 0.5em; /* Espacio entre el ícono y el texto */
+    margin-left: 0.5em; 
     transition: all 0.3s ease-in-out;
 }
 
 #save svg {
     display: block;
-    width: 24px; /* Aumento el tamaño del ícono */
+    width: 24px; 
     height: 24px;
     transform-origin: center center;
     transition: transform 0.3s ease-in-out;
