--- a/assets/css/manage_classes.css
+++ b/assets/css/manage_classes.css
@@ -393,3 +393,142 @@ tbody td:last-child {
 ::-webkit-scrollbar-thumb:hover {
     background-color: var(--button-bg);
 }
+
+/*LOADING PAGE*/
+
+.loader {
+    --background: linear-gradient(135deg, #23C4F8, #8BCD3A);
+    --shadow: #8BCD3A;
+    --text: #6C7486;
+    --page: rgba(255, 255, 255, 0.8); 
+    --page-fold: rgba(255, 255, 255, 0.6);
+    --duration: 2s; 
+    width: 120px;
+    height: 100px;
+    position: relative;
+  }
+  
+  .loader-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(255, 255, 255, 0.8); 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+  
+  .loader div {
+    width: 100%;
+    height: 100%;
+    border-radius: 13px;
+    position: relative;
+    z-index: 1;
+    perspective: 600px;
+    box-shadow: 0 4px 6px var(--shadow);
+    background-image: var(--background);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .loader div ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    position: relative;
+    display: flex;
+  }
+  
+  .loader div ul li {
+    --r: 180deg;
+    --o: 0;
+    --c: var(--page);
+    position: absolute;
+    width: 100px; 
+    height: 100px; 
+    top: 0;
+    left: 0;
+    transform-origin: left;
+    background-color: var(--c);
+    opacity: var(--o);
+    transform: rotateY(var(--r));
+    animation-duration: var(--duration);
+    animation-iteration-count: infinite;
+  }
+  
+  .loader div ul li:nth-child(2) {
+    --c: var(--page-fold);
+    animation-name: page-2;
+  }
+  
+  .loader div ul li:nth-child(3) {
+    --c: var(--page-fold);
+    animation-name: page-3;
+  }
+  
+  .loader div ul li:nth-child(4) {
+    --c: var(--page-fold);
+    animation-name: page-4;
+  }
+  
+  .loader div ul li:nth-child(5) {
+    --c: var(--page-fold);
+    animation-name: page-5;
+  }
+  
+  .loader div ul li svg {
+    width: 90px;
+    height: 120px;
+    display: block;
+  }
+  
+  .loader div ul li:first-child {
+    --r: 0deg;
+    --o: 1;
+  }
+  
+  .loader div ul li:last-child {
+    --o: 1;
+  }
+  
+  .loader span {
+    display: block;
+    left: 0;
+    right: 0;
+    top: 100%;
+    margin-top: 20px;
+    text-align: center;
+    color: var(--text);
+  }
+  
+  @keyframes page-2 {
+    0% { transform: rotateY(180deg); opacity: 0; }
+    20% { opacity: 1; }
+    35%, 100% { opacity: 0; }
+    50%, 100% { transform: rotateY(0deg); }
+  }
+  
+  @keyframes page-3 {
+    15% { transform: rotateY(180deg); opacity: 0; }
+    35% { opacity: 1; }
+    50%, 100% { opacity: 0; }
+    65%, 100% { transform: rotateY(0deg); }
+  }
+  
+  @keyframes page-4 {
+    30% { transform: rotateY(180deg); opacity: 0; }
+    50% { opacity: 1; }
+    65%, 100% { opacity: 0; }
+    80%, 100% { transform: rotateY(0deg); }
+  }
+  
+  @keyframes page-5 {
+    45% { transform: rotateY(180deg); opacity: 0; }
+    65% { opacity: 1; }
+    80%, 100% { opacity: 0; }
+    95%, 100% { transform: rotateY(0deg); }
+  }
