--- a/assets/css/crear_clase.css
+++ b/assets/css/crear_clase.css
@@ -158,7 +158,7 @@ footer p {
 
 /* Error Message */
 p {
-    color: red;
+    color: rgb(0, 0, 0);
     font-size: 14px;
     text-align: center;
     margin-top: 20px;
