--- a/assets/css/crear_clase.css
+++ b/assets/css/crear_clase.css
@@ -20,11 +20,11 @@
 body {
     font-family: 'Poppins', sans-serif;
     background-color: var(--background-color);
-    background-image: url('../images/font-cc.svg'); /* Reemplaza con la ruta de tu imagen */
-    background-size: cover; /* Ajusta la imagen para cubrir toda el área */
-    background-repeat: no-repeat; /* Evita que la imagen se repita */
-    background-attachment: fixed; /* Fija la imagen al fondo */
-    background-position: center; /* Centra la imagen */
+    background-image: url('../images/font-cc.svg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
     color: var(--text-color);
     line-height: 1.6;
     display: flex;
